jEdit 4.5 version history
       (changes since jEdit 4.4)
:encoding=UTF-8:

{{{ Version 4.5pre1

Thanks to ... for contributing to this release

}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: